--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -59,6 +59,12 @@ doctrine:
         naming_strategy: doctrine.orm.naming_strategy.underscore
         auto_mapping: true
 
+        mappings:
+            AppBundle:
+                type: annotation
+                dir: "%kernel.root_dir%/../src/"
+                prefix: AppBundle\
+
 # Swiftmailer Configuration
 swiftmailer:
     transport: "%mailer_transport%"
