--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -68,6 +68,7 @@ doctrine:
 fos_rest:
     body_converter:
         enabled: true
+        validate: true
 
 sensio_framework_extra:
     request: { converters: true }
